include(../../../cmake/EHLCodeGenerator.cmake)

# Find includes in corresponding build directories
set(CMAKE_INCLUDE_CURRENT_DIR ON)

# Add server library
# Add the def file as well
# This file is necessary because GiveFnptrsToDll uses the __stdcall calling convention on Windows,
# and the def file exports the function with no decoration so that a GetProcAddress lookup will find it
add_library(hl SHARED hl.def)

set_common_properties(hl)

target_include_directories(hl PRIVATE
	.
	entities
	entities/brush
	entities/characters
	entities/characters/NPCs
	entities/items
	entities/items/weapons
	entities/point
	gamerules
	persistence
	server_interface
	${INCLUDE_DIRECTORY}/GoldSrc
	${INCLUDE_DIRECTORY}/GoldSrc/engine
	${INCLUDE_DIRECTORY}/GoldSrc/engine/server
	${INCLUDE_DIRECTORY}/GoldSrc/game
	${INCLUDE_DIRECTORY}/GoldSrc/game/server
	${INCLUDE_DIRECTORY}/GoldSrc/math
	../shared
	../shared/entities
	../shared/entities/items
	../shared/entities/items/weapons
	../shared/player_movement
	../shared/utils)
	
target_compile_definitions(hl PRIVATE
	VALVE_DLL)

target_sources(hl PRIVATE
	activity.h
	decals.cpp
	decals.hpp
	entity_iteration.cpp
	entity_iteration.hpp
	extdll.h
	globals.cpp
	plane.cpp
	plane.h
	server_precompiled.hpp
	skill.cpp
	skill.h
	UserMessages.cpp
	UserMessages.h
	util.cpp
	util.h
	voice_gamemgr.cpp
	voice_gamemgr.h
	entities/animation.cpp
	entities/animation.h
	entities/animationevent.hpp
	entities/cbase.h
	entities/CBaseAnimating.cpp
	entities/CBaseAnimating.hpp
	entities/CBaseDelay.hpp
	entities/CBaseEntity.cpp
	entities/CBaseEntity.hpp
	entities/CBaseToggle.hpp
	entities/CNullEntity.hpp
	entities/CWorld.cpp
	entities/CWorld.hpp
	entities/locksounds.hpp
	entities/subs.cpp
	entities/brush/CBreakable.cpp
	entities/brush/CBreakable.hpp
	entities/brush/CFuncMortarField.cpp
	entities/brush/CFuncMortarField.hpp
	entities/brush/CMortar.cpp
	entities/brush/CMortar.hpp
	entities/brush/CPushable.cpp
	entities/brush/CPushable.hpp
	entities/brush/bmodels/CFuncConveyor.cpp
	entities/brush/bmodels/CFuncConveyor.hpp
	entities/brush/bmodels/CFuncIllusionary.cpp
	entities/brush/bmodels/CFuncIllusionary.hpp
	entities/brush/bmodels/CFuncMonsterClip.cpp
	entities/brush/bmodels/CFuncMonsterClip.hpp
	entities/brush/bmodels/CFuncRotating.cpp
	entities/brush/bmodels/CFuncRotating.hpp
	entities/brush/bmodels/CFuncWall.cpp
	entities/brush/bmodels/CFuncWall.hpp
	entities/brush/bmodels/CFuncWallToggle.cpp
	entities/brush/bmodels/CFuncWallToggle.hpp
	entities/brush/bmodels/CPendulum.cpp
	entities/brush/bmodels/CPendulum.hpp
	entities/brush/buttons/CBaseButton.cpp
	entities/brush/buttons/CBaseButton.hpp
	entities/brush/buttons/CButtonTarget.cpp
	entities/brush/buttons/CButtonTarget.hpp
	entities/brush/buttons/CMomentaryRotButton.cpp
	entities/brush/buttons/CMomentaryRotButton.hpp
	entities/brush/buttons/CRotButton.cpp
	entities/brush/buttons/CRotButton.hpp
	entities/brush/chargers/CBaseCharger.cpp
	entities/brush/chargers/CBaseCharger.hpp
	entities/brush/chargers/CRecharge.cpp
	entities/brush/chargers/CRecharge.hpp
	entities/brush/chargers/CWallHealth.hpp
	entities/brush/chargers/CWallHealth.cpp
	entities/brush/doors/CBaseDoor.cpp
	entities/brush/doors/CBaseDoor.hpp
	entities/brush/doors/CMomentaryDoor.cpp
	entities/brush/doors/CMomentaryDoor.hpp
	entities/brush/doors/CRotDoor.cpp
	entities/brush/doors/CRotDoor.hpp
	entities/brush/plats/CBasePlatTrain.cpp
	entities/brush/plats/CBasePlatTrain.hpp
	entities/brush/plats/CFuncPlat.cpp
	entities/brush/plats/CFuncPlat.hpp
	entities/brush/plats/CFuncPlatRot.cpp
	entities/brush/plats/CFuncPlatRot.hpp
	entities/brush/plats/CFuncTrackAuto.cpp
	entities/brush/plats/CFuncTrackAuto.hpp
	entities/brush/plats/CFuncTrackChange.cpp
	entities/brush/plats/CFuncTrackChange.hpp
	entities/brush/plats/CFuncTrackTrain.cpp
	entities/brush/plats/CFuncTrackTrain.hpp
	entities/brush/plats/CFuncTrain.cpp
	entities/brush/plats/CFuncTrain.hpp
	entities/brush/plats/CFuncTrainControls.cpp
	entities/brush/plats/CFuncTrainControls.hpp
	entities/brush/plats/CGunTarget.cpp
	entities/brush/plats/CGunTarget.hpp
	entities/brush/plats/CPathCorner.cpp
	entities/brush/plats/CPathCorner.hpp
	entities/brush/plats/CPathTrack.cpp
	entities/brush/plats/CPathTrack.hpp
	entities/brush/plats/CPlatTrigger.cpp
	entities/brush/plats/CPlatTrigger.hpp
	entities/brush/tanks/CFuncTank.cpp
	entities/brush/tanks/CFuncTank.hpp
	entities/brush/tanks/CFuncTankControls.cpp
	entities/brush/tanks/CFuncTankControls.hpp
	entities/brush/tanks/CFuncTankGun.cpp
	entities/brush/tanks/CFuncTankGun.hpp
	entities/brush/tanks/CFuncTankLaser.cpp
	entities/brush/tanks/CFuncTankLaser.hpp
	entities/brush/tanks/CFuncTankMortar.cpp
	entities/brush/tanks/CFuncTankMortar.hpp
	entities/brush/tanks/CFuncTankRocket.cpp
	entities/brush/tanks/CFuncTankRocket.hpp
	entities/changelevel/CChangeLevel.cpp
	entities/changelevel/CChangeLevel.hpp
	entities/changelevel/CFireAndDie.cpp
	entities/changelevel/CFireAndDie.hpp
	entities/changelevel/CRevertSaved.cpp
	entities/changelevel/CRevertSaved.hpp
	entities/changelevel/CTriggerEndSection.cpp
	entities/changelevel/CTriggerEndSection.hpp
	entities/changelevel/CTriggerSave.cpp
	entities/changelevel/CTriggerSave.hpp
	entities/changelevel/CTriggerVolume.cpp
	entities/changelevel/CTriggerVolume.hpp
	entities/characters/CBasePlayer.cpp
	entities/characters/CBasePlayer.hpp
	entities/characters/CBasePlayer.observer.cpp
	entities/characters/CCorpse.cpp
	entities/characters/CCorpse.hpp
	entities/characters/CDeadHEV.cpp
	entities/characters/CDeadHEV.hpp
	entities/characters/NPCs/aflock.cpp
	entities/characters/NPCs/agrunt.cpp
	entities/characters/NPCs/apache.cpp
	entities/characters/NPCs/barnacle.cpp
	entities/characters/NPCs/barney.cpp
	entities/characters/NPCs/bigmomma.cpp
	entities/characters/NPCs/bloater.cpp
	entities/characters/NPCs/bullsquid.cpp
	entities/characters/NPCs/CBaseMonster.hpp
	entities/characters/NPCs/CCineAI.cpp
	entities/characters/NPCs/CCineAI.hpp
	entities/characters/NPCs/CCineMonster.cpp
	entities/characters/NPCs/CCineMonster.hpp
	entities/characters/NPCs/CFurniture.cpp
	entities/characters/NPCs/CFurniture.hpp
	entities/characters/NPCs/combat.cpp
	entities/characters/NPCs/controller.cpp
	entities/characters/NPCs/CScriptedSentence.cpp
	entities/characters/NPCs/CScriptedSentence.hpp
	entities/characters/NPCs/CSquadMonster.cpp
	entities/characters/NPCs/CSquadMonster.hpp
	entities/characters/NPCs/CTalkMonster.cpp
	entities/characters/NPCs/CTalkMonster.hpp
	entities/characters/NPCs/defaultai.cpp
	entities/characters/NPCs/defaultai.h
	entities/characters/NPCs/flyingmonster.cpp
	entities/characters/NPCs/flyingmonster.h
	entities/characters/NPCs/gargantua.cpp
	entities/characters/NPCs/genericmonster.cpp
	entities/characters/NPCs/gman.cpp
	entities/characters/NPCs/h_ai.cpp
	entities/characters/NPCs/hassassin.cpp
	entities/characters/NPCs/headcrab.cpp
	entities/characters/NPCs/hgrunt.cpp
	entities/characters/NPCs/hornet.cpp
	entities/characters/NPCs/hornet.h
	entities/characters/NPCs/houndeye.cpp
	entities/characters/NPCs/ichthyosaur.cpp
	entities/characters/NPCs/islave.cpp
	entities/characters/NPCs/leech.cpp
	entities/characters/NPCs/monsters.cpp
	entities/characters/NPCs/monsters.h
	entities/characters/NPCs/monsterstate.cpp
	entities/characters/NPCs/nihilanth.cpp
	entities/characters/NPCs/osprey.cpp
	entities/characters/NPCs/rat.cpp
	entities/characters/NPCs/roach.cpp
	entities/characters/NPCs/schedule.cpp
	entities/characters/NPCs/schedule.h
	entities/characters/NPCs/scientist.cpp
	entities/characters/NPCs/scriptevent.h
	entities/characters/NPCs/squad.h
	entities/characters/NPCs/tentacle.cpp
	entities/characters/NPCs/turret.cpp
	entities/characters/NPCs/zombie.cpp
	entities/items/CAirtank.cpp
	entities/items/CAirtank.hpp
	entities/items/CHealthKit.cpp
	entities/items/CHealthKit.hpp
	entities/items/CItem.cpp
	entities/items/CItem.hpp
	entities/items/CItemAntidote.cpp
	entities/items/CItemAntidote.hpp
	entities/items/CItemBattery.cpp
	entities/items/CItemBattery.hpp
	entities/items/CItemLongJump.cpp
	entities/items/CItemLongJump.hpp
	entities/items/CItemSuit.cpp
	entities/items/CItemSuit.hpp
	entities/items/ammo/CAmmoAll.cpp
	entities/items/ammo/CAmmoAll.hpp
	entities/items/ammo/CAmmoGeneric.cpp
	entities/items/ammo/CAmmoGeneric.hpp
	entities/items/ammo/CBaseAmmo.cpp
	entities/items/ammo/CBaseAmmo.hpp
	entities/items/ammo/CCrossbowAmmo.cpp
	entities/items/ammo/CCrossbowAmmo.hpp
	entities/items/ammo/CEgonAmmo.cpp
	entities/items/ammo/CEgonAmmo.hpp
	entities/items/ammo/CGaussAmmo.cpp
	entities/items/ammo/CGaussAmmo.hpp
	entities/items/ammo/CGlockAmmo.cpp
	entities/items/ammo/CGlockAmmo.hpp
	entities/items/ammo/CMP5AmmoClip.cpp
	entities/items/ammo/CMP5AmmoClip.hpp
	entities/items/ammo/CMP5AmmoGrenade.cpp
	entities/items/ammo/CMP5AmmoGrenade.hpp
	entities/items/ammo/CMP5Chainammo.cpp
	entities/items/ammo/CMP5Chainammo.hpp
	entities/items/ammo/CPythonAmmo.cpp
	entities/items/ammo/CPythonAmmo.hpp
	entities/items/ammo/CRpgAmmo.cpp
	entities/items/ammo/CRpgAmmo.hpp
	entities/items/ammo/CShotgunAmmo.cpp
	entities/items/ammo/CShotgunAmmo.hpp
	entities/items/weapons/CCrossbowBolt.cpp
	entities/items/weapons/CCrossbowBolt.hpp
	entities/items/weapons/CGrenade.cpp
	entities/items/weapons/CGrenade.hpp
	entities/items/weapons/CLaserSpot.cpp
	entities/items/weapons/CLaserSpot.hpp
	entities/items/weapons/CRpgRocket.cpp
	entities/items/weapons/CRpgRocket.hpp
	entities/items/weapons/CSatchelCharge.cpp
	entities/items/weapons/CSatchelCharge.hpp
	entities/items/weapons/CSqueakGrenade.cpp
	entities/items/weapons/CSqueakGrenade.hpp
	entities/items/weapons/CTripmineGrenade.cpp
	entities/items/weapons/CTripmineGrenade.hpp
	entities/items/weapons/CWeaponBox.cpp
	entities/items/weapons/CWeaponBox.hpp
	entities/items/weapons/weapons.cpp
	entities/maprules/CGameCounter.cpp
	entities/maprules/CGameCounter.hpp
	entities/maprules/CGameCounterSet.cpp
	entities/maprules/CGameCounterSet.hpp
	entities/maprules/CGameEnd.cpp
	entities/maprules/CGameEnd.hpp
	entities/maprules/CGamePlayerHurt.cpp
	entities/maprules/CGamePlayerHurt.hpp
	entities/maprules/CGamePlayerEquip.cpp
	entities/maprules/CGamePlayerEquip.hpp
	entities/maprules/CGamePlayerTeam.cpp
	entities/maprules/CGamePlayerTeam.hpp
	entities/maprules/CGamePlayerZone.cpp
	entities/maprules/CGamePlayerZone.hpp
	entities/maprules/CGameScore.cpp
	entities/maprules/CGameScore.hpp
	entities/maprules/CGameTeamMaster.cpp
	entities/maprules/CGameTeamMaster.hpp
	entities/maprules/CGameTeamSet.cpp
	entities/maprules/CGameTeamSet.hpp
	entities/maprules/CGameText.cpp
	entities/maprules/CGameText.hpp
	entities/maprules/CRuleBrushEntity.cpp
	entities/maprules/CRuleBrushEntity.hpp
	entities/maprules/CRuleEntity.cpp
	entities/maprules/CRuleEntity.hpp
	entities/maprules/CRulePointEntity.cpp
	entities/maprules/CRulePointEntity.hpp
	entities/point/CDecal.cpp
	entities/point/CDecal.hpp
	entities/point/CEnvGlobal.cpp
	entities/point/CEnvGlobal.hpp
	entities/point/CInfoIntermission.cpp
	entities/point/CInfoIntermission.hpp
	entities/point/CMonsterMaker.cpp
	entities/point/CMonsterMaker.hpp
	entities/point/CMultiSource.cpp
	entities/point/CMultiSource.hpp
	entities/point/CPlayerSetHealth.cpp
	entities/point/CPlayerSetHealth.hpp
	entities/point/CPointEntity.hpp
	entities/point/CSoundEnt.cpp
	entities/point/CSoundEnt.hpp
	entities/point/CSprayCan.cpp
	entities/point/CSprayCan.hpp
	entities/point/CStripWeapons.cpp
	entities/point/CStripWeapons.hpp
	entities/point/effects.cpp
	entities/point/spawnpoints.cpp
	entities/point/spawnpoints.hpp
	entities/point/cyclers/CCycler.cpp
	entities/point/cyclers/CCycler.hpp
	entities/point/cyclers/CCyclerSprite.cpp
	entities/point/cyclers/CCyclerSprite.hpp
	entities/point/cyclers/CGenericCycler.cpp
	entities/point/cyclers/CGenericCycler.hpp
	entities/point/cyclers/CWeaponCycler.cpp
	entities/point/cyclers/CWeaponCycler.hpp
	entities/point/cyclers/CWreckage.cpp
	entities/point/cyclers/CWreckage.hpp
	entities/point/effects/CBeam.cpp
	entities/point/effects/CBeam.hpp
	entities/point/effects/CBlood.cpp
	entities/point/effects/CBlood.hpp
	entities/point/effects/CBloodSplat.cpp
	entities/point/effects/CBloodSplat.hpp
	entities/point/effects/CBubbling.cpp
	entities/point/effects/CBubbling.hpp
	entities/point/effects/CEnvBeverage.cpp
	entities/point/effects/CEnvBeverage.hpp
	entities/point/effects/CEnvExplosion.cpp
	entities/point/effects/CEnvExplosion.hpp
	entities/point/effects/CEnvFunnel.cpp
	entities/point/effects/CEnvFunnel.hpp
	entities/point/effects/CEnvShooter.cpp
	entities/point/effects/CEnvShooter.hpp
	entities/point/effects/CEnvSpark.cpp
	entities/point/effects/CEnvSpark.hpp
	entities/point/effects/CFade.cpp
	entities/point/effects/CFade.hpp
	entities/point/effects/CGibShooter.cpp
	entities/point/effects/CGibShooter.hpp
	entities/point/effects/CGlow.cpp
	entities/point/effects/CGlow.hpp
	entities/point/effects/CItemSoda.cpp
	entities/point/effects/CItemSoda.hpp
	entities/point/effects/CLaser.cpp
	entities/point/effects/CLaser.hpp
	entities/point/effects/CLightning.cpp
	entities/point/effects/CLightning.hpp
	entities/point/effects/CMessage.cpp
	entities/point/effects/CMessage.hpp
	entities/point/effects/CShake.cpp
	entities/point/effects/CShake.hpp
	entities/point/effects/CShower.cpp
	entities/point/effects/CShower.hpp
	entities/point/effects/CSprite.cpp
	entities/point/effects/CSprite.hpp
	entities/point/effects/info_target.cpp
	entities/point/lights/CEnvLight.cpp
	entities/point/lights/CEnvLight.hpp
	entities/point/lights/CLight.cpp
	entities/point/lights/CLight.hpp
	entities/point/sound/CAmbientGeneric.cpp
	entities/point/sound/CAmbientGeneric.hpp
	entities/point/sound/CEnvSound.cpp
	entities/point/sound/CEnvSound.hpp
	entities/point/sound/CSpeaker.cpp
	entities/point/sound/CSpeaker.hpp
	entities/point/xen/CActAnimating.cpp
	entities/point/xen/CActAnimating.hpp
	entities/point/xen/CXenHair.cpp
	entities/point/xen/CXenHair.hpp
	entities/point/xen/CXenHull.cpp
	entities/point/xen/CXenHull.hpp
	entities/point/xen/CXenPLight.cpp
	entities/point/xen/CXenPLight.hpp
	entities/point/xen/CXenSpore.cpp
	entities/point/xen/CXenSpore.hpp
	entities/point/xen/CXenSporeLarge.cpp
	entities/point/xen/CXenSporeLarge.hpp
	entities/point/xen/CXenSporeMed.cpp
	entities/point/xen/CXenSporeMed.hpp
	entities/point/xen/CXenSporeSmall.cpp
	entities/point/xen/CXenSporeSmall.hpp
	entities/point/xen/CXenTree.cpp
	entities/point/xen/CXenTree.hpp
	entities/point/xen/CXenTreeTrigger.cpp
	entities/point/xen/CXenTreeTrigger.hpp
	entities/triggers/CAutoTrigger.cpp
	entities/triggers/CAutoTrigger.hpp
	entities/triggers/CBaseTrigger.cpp
	entities/triggers/CBaseTrigger.hpp
	entities/triggers/CFrictionModifier.cpp
	entities/triggers/CFrictionModifier.hpp
	entities/triggers/CLadder.cpp
	entities/triggers/CLadder.hpp
	entities/triggers/CMultiManager.cpp
	entities/triggers/CMultiManager.hpp
	entities/triggers/CRenderFxManager.cpp
	entities/triggers/CRenderFxManager.hpp
	entities/triggers/CTriggerCamera.cpp
	entities/triggers/CTriggerCamera.hpp
	entities/triggers/CTargetCDAudio.cpp
	entities/triggers/CTargetCDAudio.hpp
	entities/triggers/CTriggerCDAudio.cpp
	entities/triggers/CTriggerCDAudio.hpp
	entities/triggers/CTriggerChangeTarget.cpp
	entities/triggers/CTriggerChangeTarget.hpp
	entities/triggers/CTriggerCounter.cpp
	entities/triggers/CTriggerCounter.hpp
	entities/triggers/CTriggerGravity.cpp
	entities/triggers/CTriggerGravity.hpp
	entities/triggers/CTriggerHurt.cpp
	entities/triggers/CTriggerHurt.hpp
	entities/triggers/CTriggerMonsterJump.cpp
	entities/triggers/CTriggerMonsterJump.hpp
	entities/triggers/CTriggerMultiple.cpp
	entities/triggers/CTriggerMultiple.hpp
	entities/triggers/CTriggerOnce.cpp
	entities/triggers/CTriggerOnce.hpp
	entities/triggers/CTriggerPush.cpp
	entities/triggers/CTriggerPush.hpp
	entities/triggers/CTriggerRelay.cpp
	entities/triggers/CTriggerRelay.hpp
	entities/triggers/CTriggerTeleport.cpp
	entities/triggers/CTriggerTeleport.hpp
	gamerules/gamerules.cpp
	gamerules/gamerules.h
	gamerules/mapcycle.cpp
	gamerules/mapcycle.hpp
	gamerules/multiplay_gamerules.cpp
	gamerules/singleplay_gamerules.cpp
	gamerules/teamplay_gamerules.cpp
	gamerules/teamplay_gamerules.h
	navigation/CNodeEnt.cpp
	navigation/CNodeEnt.hpp
	navigation/CNodeViewer.cpp
	navigation/CNodeViewer.hpp
	navigation/CTestHull.cpp
	navigation/CTestHull.hpp
	navigation/nodes.cpp
	navigation/nodes.h
	navigation/nodes_io.cpp
	navigation/nodes_io.hpp
	persistence/globalstate.cpp
	persistence/globalstate.hpp
	persistence/saverestore.cpp
	persistence/saverestore.hpp
	server_interface/client.cpp
	server_interface/client.h
	server_interface/dll_functions.cpp
	server_interface/dll_functions.hpp
	server_interface/enginecallback.h
	server_interface/game.cpp
	server_interface/game.h
	server_interface/server_interface.cpp
	server_interface/server_interface.hpp
	sound/sound_playback.cpp
	sound/sound_playback.hpp
	${INCLUDE_DIRECTORY}/GoldSrc/const.h
	${INCLUDE_DIRECTORY}/GoldSrc/crc.h
	${INCLUDE_DIRECTORY}/GoldSrc/cvardef.h
	${INCLUDE_DIRECTORY}/GoldSrc/director_cmds.h
	${INCLUDE_DIRECTORY}/GoldSrc/enums.h
	${INCLUDE_DIRECTORY}/GoldSrc/FileSystem.h
	${INCLUDE_DIRECTORY}/GoldSrc/hltv.h
	${INCLUDE_DIRECTORY}/GoldSrc/in_buttons.h
	${INCLUDE_DIRECTORY}/GoldSrc/interface.cpp
	${INCLUDE_DIRECTORY}/GoldSrc/interface.h
	${INCLUDE_DIRECTORY}/GoldSrc/keydefs.h
	${INCLUDE_DIRECTORY}/GoldSrc/netadr.h
	${INCLUDE_DIRECTORY}/GoldSrc/Platform.h
	${INCLUDE_DIRECTORY}/GoldSrc/PlatformHeaders.hpp
	${INCLUDE_DIRECTORY}/GoldSrc/Sequence.h
	${INCLUDE_DIRECTORY}/GoldSrc/studio.h
	${INCLUDE_DIRECTORY}/GoldSrc/winsani_in.h
	${INCLUDE_DIRECTORY}/GoldSrc/winsani_out.h
	${INCLUDE_DIRECTORY}/GoldSrc/codegen/codegen_api.hpp
	${INCLUDE_DIRECTORY}/GoldSrc/engine/com_model.h
	${INCLUDE_DIRECTORY}/GoldSrc/engine/custom.h
	${INCLUDE_DIRECTORY}/GoldSrc/engine/customentity.h
	${INCLUDE_DIRECTORY}/GoldSrc/engine/edict.h
	${INCLUDE_DIRECTORY}/GoldSrc/engine/entity_state.h
	${INCLUDE_DIRECTORY}/GoldSrc/engine/event_args.h
	${INCLUDE_DIRECTORY}/GoldSrc/engine/event_flags.h
	${INCLUDE_DIRECTORY}/GoldSrc/engine/pm_defs.h
	${INCLUDE_DIRECTORY}/GoldSrc/engine/pm_info.h
	${INCLUDE_DIRECTORY}/GoldSrc/engine/pm_movevars.h
	${INCLUDE_DIRECTORY}/GoldSrc/engine/pmtrace.h
	${INCLUDE_DIRECTORY}/GoldSrc/engine/progdefs.h
	${INCLUDE_DIRECTORY}/GoldSrc/engine/progs.h
	${INCLUDE_DIRECTORY}/GoldSrc/engine/r_studioint.h
	${INCLUDE_DIRECTORY}/GoldSrc/engine/screenfade.h
	${INCLUDE_DIRECTORY}/GoldSrc/engine/shake.h
	${INCLUDE_DIRECTORY}/GoldSrc/engine/usercmd.h
	${INCLUDE_DIRECTORY}/GoldSrc/engine/weaponinfo.h
	${INCLUDE_DIRECTORY}/GoldSrc/engine/server/sv_engine_int.hpp
	${INCLUDE_DIRECTORY}/GoldSrc/game/voice_common.h
	${INCLUDE_DIRECTORY}/GoldSrc/game/server/server_int.hpp
	${INCLUDE_DIRECTORY}/GoldSrc/math/mathlib.cpp
	${INCLUDE_DIRECTORY}/GoldSrc/math/mathlib.h
	${INCLUDE_DIRECTORY}/GoldSrc/math/vector.h)

add_subdirectory(../shared shared)

add_shared_sources(hl)

if (MSVC)
	target_sources(hl PRIVATE ../cpp.hint)
endif()

target_precompile_headers(hl
	PRIVATE
		server_precompiled.hpp)

# Create filters
get_target_property(SERVER_SOURCES hl SOURCES)
source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR}/../../.. FILES ${SERVER_SOURCES})

ehl_codegen_enable(hl)

if (MSVC)
	set(HLDS_EXECUTABLE "hlds.exe")

	# If HalfLife_HLDS_DIRECTORY is not specified it will leave a non-functional "default" setting
	set_target_properties(hl PROPERTIES
		VS_DEBUGGER_COMMAND "${HalfLife_HLDS_DIRECTORY}/${HLDS_EXECUTABLE}"
		VS_DEBUGGER_COMMAND_ARGUMENTS ${COMMAND_ARGUMENTS}
		VS_DEBUGGER_WORKING_DIRECTORY "${HalfLife_HLDS_DIRECTORY}")
endif()

# Set install paths to the user-defined mod directory
install(TARGETS hl
	RUNTIME DESTINATION dlls
	LIBRARY DESTINATION dlls
)

if (WIN32)
	install(FILES $<TARGET_PDB_FILE:hl> DESTINATION dlls OPTIONAL)
endif()
