target_sources(hl
	PRIVATE
		animation.cpp
		animation.hpp
		animationevent.hpp
		cbase.hpp
		CBaseAnimating.cpp
		CBaseAnimating.hpp
		CBaseEntity.cpp
		CBaseEntity.hpp
		CBaseToggle.cpp
		CBaseToggle.hpp
		CDelayedUse.cpp
		CDelayedUse.hpp
		CNullEntity.cpp
		CNullEntity.hpp
		CWorld.cpp
		CWorld.hpp
		locksounds.cpp
		locksounds.hpp
		brush/CBreakable.cpp
		brush/CBreakable.hpp
		brush/CFuncMortarField.cpp
		brush/CFuncMortarField.hpp
		brush/CMortar.cpp
		brush/CMortar.hpp
		brush/CPushable.cpp
		brush/CPushable.hpp
		brush/bmodels/CFuncConveyor.cpp
		brush/bmodels/CFuncConveyor.hpp
		brush/bmodels/CFuncIllusionary.cpp
		brush/bmodels/CFuncIllusionary.hpp
		brush/bmodels/CFuncMonsterClip.cpp
		brush/bmodels/CFuncMonsterClip.hpp
		brush/bmodels/CFuncRotating.cpp
		brush/bmodels/CFuncRotating.hpp
		brush/bmodels/CFuncWall.cpp
		brush/bmodels/CFuncWall.hpp
		brush/bmodels/CFuncWallToggle.cpp
		brush/bmodels/CFuncWallToggle.hpp
		brush/bmodels/CPendulum.cpp
		brush/bmodels/CPendulum.hpp
		brush/buttons/CBaseButton.cpp
		brush/buttons/CBaseButton.hpp
		brush/buttons/CButtonTarget.cpp
		brush/buttons/CButtonTarget.hpp
		brush/buttons/CMomentaryRotButton.cpp
		brush/buttons/CMomentaryRotButton.hpp
		brush/buttons/CRotButton.cpp
		brush/buttons/CRotButton.hpp
		brush/chargers/CBaseCharger.cpp
		brush/chargers/CBaseCharger.hpp
		brush/chargers/CRecharge.cpp
		brush/chargers/CRecharge.hpp
		brush/chargers/CWallHealth.hpp
		brush/chargers/CWallHealth.cpp
		brush/doors/CBaseDoor.cpp
		brush/doors/CBaseDoor.hpp
		brush/doors/CMomentaryDoor.cpp
		brush/doors/CMomentaryDoor.hpp
		brush/doors/CRotDoor.cpp
		brush/doors/CRotDoor.hpp
		brush/plats/CBasePlatTrain.cpp
		brush/plats/CBasePlatTrain.hpp
		brush/plats/CFuncPlat.cpp
		brush/plats/CFuncPlat.hpp
		brush/plats/CFuncPlatRot.cpp
		brush/plats/CFuncPlatRot.hpp
		brush/plats/CFuncTrackAuto.cpp
		brush/plats/CFuncTrackAuto.hpp
		brush/plats/CFuncTrackChange.cpp
		brush/plats/CFuncTrackChange.hpp
		brush/plats/CFuncTrackTrain.cpp
		brush/plats/CFuncTrackTrain.hpp
		brush/plats/CFuncTrain.cpp
		brush/plats/CFuncTrain.hpp
		brush/plats/CFuncTrainControls.cpp
		brush/plats/CFuncTrainControls.hpp
		brush/plats/CGunTarget.cpp
		brush/plats/CGunTarget.hpp
		brush/plats/CPathCorner.cpp
		brush/plats/CPathCorner.hpp
		brush/plats/CPathTrack.cpp
		brush/plats/CPathTrack.hpp
		brush/plats/CPlatTrigger.cpp
		brush/plats/CPlatTrigger.hpp
		brush/tanks/CFuncTank.cpp
		brush/tanks/CFuncTank.hpp
		brush/tanks/CFuncTankControls.cpp
		brush/tanks/CFuncTankControls.hpp
		brush/tanks/CFuncTankGun.cpp
		brush/tanks/CFuncTankGun.hpp
		brush/tanks/CFuncTankLaser.cpp
		brush/tanks/CFuncTankLaser.hpp
		brush/tanks/CFuncTankMortar.cpp
		brush/tanks/CFuncTankMortar.hpp
		brush/tanks/CFuncTankRocket.cpp
		brush/tanks/CFuncTankRocket.hpp
		changelevel/CChangeLevel.cpp
		changelevel/CChangeLevel.hpp
		changelevel/CFireAndDie.cpp
		changelevel/CFireAndDie.hpp
		changelevel/CRevertSaved.cpp
		changelevel/CRevertSaved.hpp
		changelevel/CTriggerEndSection.cpp
		changelevel/CTriggerEndSection.hpp
		changelevel/CTriggerSave.cpp
		changelevel/CTriggerSave.hpp
		changelevel/CTriggerVolume.cpp
		changelevel/CTriggerVolume.hpp
		characters/CBasePlayer.cpp
		characters/CBasePlayer.hpp
		characters/CBasePlayer.observer.cpp
		characters/CCorpse.cpp
		characters/CCorpse.hpp
		characters/CDeadHEV.cpp
		characters/CDeadHEV.hpp
		items/CAirtank.cpp
		items/CAirtank.hpp
		items/CHealthKit.cpp
		items/CHealthKit.hpp
		items/CItem.cpp
		items/CItem.hpp
		items/CItemAntidote.cpp
		items/CItemAntidote.hpp
		items/CItemBattery.cpp
		items/CItemBattery.hpp
		items/CItemLongJump.cpp
		items/CItemLongJump.hpp
		items/CItemSuit.cpp
		items/CItemSuit.hpp
		items/ammo/CAmmoAll.cpp
		items/ammo/CAmmoAll.hpp
		items/ammo/CAmmoGeneric.cpp
		items/ammo/CAmmoGeneric.hpp
		items/ammo/CBaseAmmo.cpp
		items/ammo/CBaseAmmo.hpp
		items/ammo/CCrossbowAmmo.cpp
		items/ammo/CCrossbowAmmo.hpp
		items/ammo/CEgonAmmo.cpp
		items/ammo/CEgonAmmo.hpp
		items/ammo/CGaussAmmo.cpp
		items/ammo/CGaussAmmo.hpp
		items/ammo/CGlockAmmo.cpp
		items/ammo/CGlockAmmo.hpp
		items/ammo/CMP5AmmoClip.cpp
		items/ammo/CMP5AmmoClip.hpp
		items/ammo/CMP5AmmoGrenade.cpp
		items/ammo/CMP5AmmoGrenade.hpp
		items/ammo/CMP5Chainammo.cpp
		items/ammo/CMP5Chainammo.hpp
		items/ammo/CPythonAmmo.cpp
		items/ammo/CPythonAmmo.hpp
		items/ammo/CRpgAmmo.cpp
		items/ammo/CRpgAmmo.hpp
		items/ammo/CShotgunAmmo.cpp
		items/ammo/CShotgunAmmo.hpp
		items/weapons/CCrossbowBolt.cpp
		items/weapons/CCrossbowBolt.hpp
		items/weapons/CGrenade.cpp
		items/weapons/CGrenade.hpp
		items/weapons/CLaserSpot.cpp
		items/weapons/CLaserSpot.hpp
		items/weapons/CRpgRocket.cpp
		items/weapons/CRpgRocket.hpp
		items/weapons/CSatchelCharge.cpp
		items/weapons/CSatchelCharge.hpp
		items/weapons/CSqueakGrenade.cpp
		items/weapons/CSqueakGrenade.hpp
		items/weapons/CTripmineGrenade.cpp
		items/weapons/CTripmineGrenade.hpp
		items/weapons/CWeaponBox.cpp
		items/weapons/CWeaponBox.hpp
		items/weapons/weapons.cpp
		maprules/CGameCounter.cpp
		maprules/CGameCounter.hpp
		maprules/CGameCounterSet.cpp
		maprules/CGameCounterSet.hpp
		maprules/CGameEnd.cpp
		maprules/CGameEnd.hpp
		maprules/CGamePlayerHurt.cpp
		maprules/CGamePlayerHurt.hpp
		maprules/CGamePlayerEquip.cpp
		maprules/CGamePlayerEquip.hpp
		maprules/CGamePlayerTeam.cpp
		maprules/CGamePlayerTeam.hpp
		maprules/CGamePlayerZone.cpp
		maprules/CGamePlayerZone.hpp
		maprules/CGameScore.cpp
		maprules/CGameScore.hpp
		maprules/CGameTeamMaster.cpp
		maprules/CGameTeamMaster.hpp
		maprules/CGameTeamSet.cpp
		maprules/CGameTeamSet.hpp
		maprules/CGameText.cpp
		maprules/CGameText.hpp
		maprules/CRuleBrushEntity.cpp
		maprules/CRuleBrushEntity.hpp
		maprules/CRuleEntity.cpp
		maprules/CRuleEntity.hpp
		maprules/CRulePointEntity.cpp
		maprules/CRulePointEntity.hpp
		point/CBaseDMStart.cpp
		point/CBaseDMStart.hpp
		point/CDecal.cpp
		point/CDecal.hpp
		point/CEnvGlobal.cpp
		point/CEnvGlobal.hpp
		point/CInfoIntermission.cpp
		point/CInfoIntermission.hpp
		point/CMonsterMaker.cpp
		point/CMonsterMaker.hpp
		point/CMultiSource.cpp
		point/CMultiSource.hpp
		point/CPlayerSetHealth.cpp
		point/CPlayerSetHealth.hpp
		point/CPointEntity.cpp
		point/CPointEntity.hpp
		point/CSoundEnt.cpp
		point/CSoundEnt.hpp
		point/CSprayCan.cpp
		point/CSprayCan.hpp
		point/CStripWeapons.cpp
		point/CStripWeapons.hpp
		point/cyclers/CCycler.cpp
		point/cyclers/CCycler.hpp
		point/cyclers/CCyclerSprite.cpp
		point/cyclers/CCyclerSprite.hpp
		point/cyclers/CWeaponCycler.cpp
		point/cyclers/CWeaponCycler.hpp
		point/cyclers/CWreckage.cpp
		point/cyclers/CWreckage.hpp
		point/effects/CBeam.cpp
		point/effects/CBeam.hpp
		point/effects/CBlood.cpp
		point/effects/CBlood.hpp
		point/effects/CBloodSplat.cpp
		point/effects/CBloodSplat.hpp
		point/effects/CBubbling.cpp
		point/effects/CBubbling.hpp
		point/effects/CEnvBeverage.cpp
		point/effects/CEnvBeverage.hpp
		point/effects/CEnvExplosion.cpp
		point/effects/CEnvExplosion.hpp
		point/effects/CEnvFunnel.cpp
		point/effects/CEnvFunnel.hpp
		point/effects/CEnvShooter.cpp
		point/effects/CEnvShooter.hpp
		point/effects/CEnvSpark.cpp
		point/effects/CEnvSpark.hpp
		point/effects/CFade.cpp
		point/effects/CFade.hpp
		point/effects/CGib.cpp
		point/effects/CGib.hpp
		point/effects/CGibShooter.cpp
		point/effects/CGibShooter.hpp
		point/effects/CGlow.cpp
		point/effects/CGlow.hpp
		point/effects/CItemSoda.cpp
		point/effects/CItemSoda.hpp
		point/effects/CLaser.cpp
		point/effects/CLaser.hpp
		point/effects/CLightning.cpp
		point/effects/CLightning.hpp
		point/effects/CMessage.cpp
		point/effects/CMessage.hpp
		point/effects/CShake.cpp
		point/effects/CShake.hpp
		point/effects/CShower.cpp
		point/effects/CShower.hpp
		point/effects/CSprite.cpp
		point/effects/CSprite.hpp
		point/effects/info_target.cpp
		point/lights/CEnvLight.cpp
		point/lights/CEnvLight.hpp
		point/lights/CLight.cpp
		point/lights/CLight.hpp
		point/sound/CAmbientGeneric.cpp
		point/sound/CAmbientGeneric.hpp
		point/sound/CEnvSound.cpp
		point/sound/CEnvSound.hpp
		point/sound/CSpeaker.cpp
		point/sound/CSpeaker.hpp
		point/xen/CActAnimating.cpp
		point/xen/CActAnimating.hpp
		point/xen/CXenHair.cpp
		point/xen/CXenHair.hpp
		point/xen/CXenHull.cpp
		point/xen/CXenHull.hpp
		point/xen/CXenPLight.cpp
		point/xen/CXenPLight.hpp
		point/xen/CXenSpore.cpp
		point/xen/CXenSpore.hpp
		point/xen/CXenSporeLarge.cpp
		point/xen/CXenSporeLarge.hpp
		point/xen/CXenSporeMed.cpp
		point/xen/CXenSporeMed.hpp
		point/xen/CXenSporeSmall.cpp
		point/xen/CXenSporeSmall.hpp
		point/xen/CXenTree.cpp
		point/xen/CXenTree.hpp
		point/xen/CXenTreeTrigger.cpp
		point/xen/CXenTreeTrigger.hpp
		triggers/CAutoTrigger.cpp
		triggers/CAutoTrigger.hpp
		triggers/CBaseTrigger.cpp
		triggers/CBaseTrigger.hpp
		triggers/CFrictionModifier.cpp
		triggers/CFrictionModifier.hpp
		triggers/CLadder.cpp
		triggers/CLadder.hpp
		triggers/CMultiManager.cpp
		triggers/CMultiManager.hpp
		triggers/CRenderFxManager.cpp
		triggers/CRenderFxManager.hpp
		triggers/CTriggerCamera.cpp
		triggers/CTriggerCamera.hpp
		triggers/CTargetCDAudio.cpp
		triggers/CTargetCDAudio.hpp
		triggers/CTriggerCDAudio.cpp
		triggers/CTriggerCDAudio.hpp
		triggers/CTriggerChangeTarget.cpp
		triggers/CTriggerChangeTarget.hpp
		triggers/CTriggerGravity.cpp
		triggers/CTriggerGravity.hpp
		triggers/CTriggerHurt.cpp
		triggers/CTriggerHurt.hpp
		triggers/CTriggerMonsterJump.cpp
		triggers/CTriggerMonsterJump.hpp
		triggers/CTriggerMultiple.cpp
		triggers/CTriggerMultiple.hpp
		triggers/CTriggerOnce.cpp
		triggers/CTriggerOnce.hpp
		triggers/CTriggerPush.cpp
		triggers/CTriggerPush.hpp
		triggers/CTriggerRelay.cpp
		triggers/CTriggerRelay.hpp
		triggers/CTriggerTeleport.cpp
		triggers/CTriggerTeleport.hpp)

add_subdirectory(characters/NPCs)
